--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3610559 */
-  src: url('/src/assets/iconfont/iconfont.woff2?t=1661423396469') format('woff2'),
-       url('iconfont.woff?t=1661423396469') format('woff'),
-       url('iconfont.ttf?t=1661423396469') format('truetype');
+  src: url('iconfont.woff2?t=1661419692443') format('woff2'),
+       url('iconfont.woff?t=1661419692443') format('woff'),
+       url('iconfont.ttf?t=1661419692443') format('truetype');
 }
 
 .iconfont {
-  font-family: "iconfont", sans-serif !important;
+  font-family: "iconfont" !important;
   font-size: 16px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
